[gd_scene load_steps=7 format=3 uid="uid://drrfk1gcr4ujm"]

[ext_resource type="Texture2D" uid="uid://rpa10nbehg0v" path="res://graphics/background/bg.png" id="1_61bhp"]
[ext_resource type="Script" path="res://scripts/combat/arena/combat_arena.gd" id="1_h52x4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nbob1"]
size = Vector2(32, 657)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l13q2"]
size = Vector2(31.75, 656)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrfyn"]
size = Vector2(1024, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhb0g"]
size = Vector2(1024, 20)

[node name="CombatArena" type="Node2D"]
position = Vector2(208, 72)
script = ExtResource("1_h52x4")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(760, 456)
scale = Vector2(1.60078, 1.69097)
texture = ExtResource("1_61bhp")

[node name="Borders" type="Node2D" parent="."]

[node name="BorderRight" type="StaticBody2D" parent="Borders"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderRight"]
position = Vector2(1232, 456.5)
shape = SubResource("RectangleShape2D_nbob1")

[node name="ColorRect" type="ColorRect" parent="Borders/BorderRight"]
offset_left = 224.0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 624.0
scale = Vector2(0.988768, 1.31602)
metadata/_edit_use_anchors_ = true

[node name="BorderLeft" type="StaticBody2D" parent="Borders"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderLeft"]
light_mask = 2
position = Vector2(240, 456)
shape = SubResource("RectangleShape2D_l13q2")

[node name="ColorRect" type="ColorRect" parent="Borders/BorderLeft"]
offset_left = 1216.0
offset_top = 128.0
offset_right = 1232.0
offset_bottom = 751.0
scale = Vector2(1.99488, 1.05376)
metadata/_edit_use_anchors_ = true

[node name="BorderTop" type="StaticBody2D" parent="Borders"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderTop"]
light_mask = 2
position = Vector2(736, 140)
shape = SubResource("RectangleShape2D_mrfyn")

[node name="ColorRect" type="ColorRect" parent="Borders/BorderTop"]
offset_left = 224.0
offset_top = 128.0
offset_right = 1248.0
offset_bottom = 152.0
metadata/_edit_use_anchors_ = true

[node name="BorderBottom" type="StaticBody2D" parent="Borders"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderBottom"]
light_mask = 2
position = Vector2(736, 776)
shape = SubResource("RectangleShape2D_xhb0g")

[node name="ColorRect" type="ColorRect" parent="Borders/BorderBottom"]
offset_left = 224.0
offset_top = 768.0
offset_right = 1248.0
offset_bottom = 800.0
metadata/_edit_use_anchors_ = true

[node name="CreatureCards" type="Node2D" parent="."]

[node name="CardSpawn1" type="Node2D" parent="CreatureCards"]
position = Vector2(252, 8)

[node name="CardSpawn2" type="Node2D" parent="CreatureCards"]
position = Vector2(1024, 8)

[node name="CreatureSpawnPoints" type="Node2D" parent="."]

[node name="PlayerSpawnPoint" type="Node2D" parent="CreatureSpawnPoints"]
position = Vector2(352, 672)

[node name="TargetDummySpawnPoint" type="Node2D" parent="CreatureSpawnPoints"]
position = Vector2(1056, 224)

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AttackButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 320.0
offset_top = 864.0
offset_right = 520.0
offset_bottom = 944.0
text = "Attack
"

[node name="DodgeButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 608.0
offset_top = 864.0
offset_right = 808.0
offset_bottom = 944.0
text = "Dodge"

[node name="DashButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 896.0
offset_top = 864.0
offset_right = 1096.0
offset_bottom = 944.0
text = "Dash"

[node name="ActionStack" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1408.0
offset_top = 328.0
offset_right = 1472.0
offset_bottom = 392.0

[node name="VBoxContainer" type="VBoxContainer" parent="ActionStack"]
layout_mode = 2
offset_right = 232.0
offset_bottom = 184.0

[node name="MarginContainer" type="MarginContainer" parent="ActionStack/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Title" type="Label" parent="ActionStack/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Stack"
horizontal_alignment = 1
uppercase = true

[node name="MarginContainer2" type="MarginContainer" parent="ActionStack/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="PreppedAction1" type="Label" parent="ActionStack/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Action"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="ActionStack/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="PreppedAction2" type="Label" parent="ActionStack/VBoxContainer/MarginContainer3"]
layout_mode = 2
text = "Action"
horizontal_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="ActionStack/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="PreppedAction3" type="Label" parent="ActionStack/VBoxContainer/MarginContainer4"]
layout_mode = 2
text = "Action"
horizontal_alignment = 1

[connection signal="pressed" from="Buttons/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="Buttons/DodgeButton" to="." method="_on_dodge_button_pressed"]
[connection signal="pressed" from="Buttons/DashButton" to="." method="_on_dash_button_pressed"]
